--- a/sass/components/_page-hero.scss
+++ b/sass/components/_page-hero.scss
@@ -48,6 +48,8 @@
   border-radius: 4px;
   border: transparent;
 
+  cursor: pointer;
+
   color: $primary-white-color;
 
   transition: background-color 250ms $cubic-bezier;
