--- a/css/main.css
+++ b/css/main.css
@@ -1,97 +1,8 @@
-body {
-  font-family: "Roboto", sans-serif;
-  color: #212121;
-  background-color: #ffffff;
-}
-
-h1,
-h2,
-h3,
-p,
-ul {
-  margin: 0;
-}
-
-ul {
-  padding: 0;
-  list-style: none;
-}
-
-img {
-  display: block;
-  max-width: 100%;
-  height: auto;
-}
-
-.link {
-  text-decoration: none;
-}
-
-.conteiner {
-  width: 1200px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin: 0 auto;
-}
-
-.section {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-
-.visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  white-space: nowrap;
-  -webkit-clip-path: inset(100%);
-          clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
-}
-
-.title {
-  font-size: 36px;
-  line-height: 42px;
-  text-align: center;
-  letter-spacing: 0.03em;
-  margin-bottom: 50px;
-  color: #212121;
-}
-
-.cursor {
-  cursor: pointer;
-}
-
-.footer__logo, .header__logo {
-  font-family: "Raleway";
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.1923076923;
-  letter-spacing: 0.03em;
-}
-
-.header__logo {
-  color: #000;
-}
-
-.footer__logo {
-  color: #fff;
-}
-
-.logo--web {
-  color: #2196f3;
-}
-
 .header {
   border-bottom: 1px solid #ececec;
 }
-.header .conteiner {
-  display: flex;
-  align-items: center;
+.header .logo {
+  color: #000;
 }
 
 .nav {
@@ -124,10 +35,10 @@ img {
   color: #2196f3;
 }
 
-.current {
+.nav__link--current {
   color: #2196f3;
 }
-.current::after {
+.nav__link--current::after {
   content: "";
   position: absolute;
   display: block;
@@ -139,7 +50,7 @@ img {
   bottom: -1px;
 }
 
-.header-contacts__list {
+.header-contacts {
   display: flex;
   align-items: center;
 }
@@ -169,6 +80,18 @@ img {
 
 .header-contacts__ietm:not(:last-child) {
   margin-right: 30px;
+}
+
+.logo {
+  font-family: "Raleway";
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.1923076923;
+  letter-spacing: 0.03em;
+}
+
+.logo__web {
+  color: #2196f3;
 }
 
 .hero {
@@ -207,6 +130,7 @@ img {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   border: transparent;
+  cursor: pointer;
   color: #ffffff;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -216,7 +140,7 @@ img {
   border-radius: 4px;
 }
 
-.features_list {
+.features {
   display: flex;
   gap: 30px;
 }
@@ -225,7 +149,7 @@ img {
   width: 270px;
 }
 
-.features__icon--background {
+.features__icon-box {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -247,10 +171,6 @@ img {
   line-height: 1.7142857143;
   letter-spacing: 0.03em;
   color: #757575;
-}
-
-.work {
-  padding-top: 0;
 }
 
 .work__list {
@@ -281,10 +201,6 @@ img {
 }
 
 .team {
-  background-color: #f5f4fa;
-}
-
-.team__list {
   display: flex;
   gap: 30px;
 }
@@ -303,7 +219,7 @@ img {
   align-items: center;
 }
 
-.team__name {
+.team__title {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.1875;
@@ -311,7 +227,7 @@ img {
   color: #212121;
 }
 
-.team__positon {
+.team__text {
   font-size: 16px;
   line-height: 1.1875;
   text-align: center;
@@ -319,34 +235,7 @@ img {
   color: #757575;
 }
 
-.team-icon__list {
-  display: flex;
-  gap: 10px;
-  margin-top: 16px;
-}
-
-.team-icon__link {
-  width: 44px;
-  height: 44px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 50px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.team-icon__link:hover, .team-icon__link:focus {
-  background-color: #2196f3;
-}
-.team-icon__link:hover .team-icon__social, .team-icon__link:focus .team-icon__social {
-  fill: #ffffff;
-}
-
-.team-icon__social {
-  fill: #afb1b8;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.clients__list {
+.clients {
   display: flex;
   gap: 30px;
 }
@@ -373,33 +262,6 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-btn__list {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 30px;
-  margin-bottom: 34px;
-}
-
-.button {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.625;
-  letter-spacing: 0.03em;
-  color: #212121;
-  padding: 6px 22px;
-  background-color: #f5f4fa;
-  border-radius: 4px;
-  border-color: transparent;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.button:hover, .button:focus {
-  background-color: #2196f3;
-  color: #ffffff;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-  border-radius: 4px;
-}
-
 .project__list {
   display: flex;
   flex-wrap: wrap;
@@ -416,9 +278,6 @@ img {
 }
 .card__link:hover, .card__link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-.card__link:hover .card__text, .card__link:focus .card__text {
-  transform: translateY(0);
 }
 
 .card__describe {
@@ -443,6 +302,9 @@ img {
   height: 100%;
   transform: translateY(101%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.card__link:hover .card__text, .card__link:focus .card__text {
+  transform: translateY(0);
 }
 
 .card__bottom {
@@ -573,6 +435,7 @@ img {
   letter-spacing: 0.03em;
   color: #757575;
   margin-top: 20px;
+  cursor: pointer;
 }
 
 .modal-form__span--checkbox-icon {
@@ -635,10 +498,14 @@ img {
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
   padding: 0;
+  cursor: pointer;
 }
 
 .footer {
   background-color: #2f303a;
+}
+.footer .logo {
+  color: #ffffff;
 }
 
 .footer-conteiner {
@@ -684,40 +551,6 @@ address {
   flex-grow: 1;
 }
 
-.footer-icon__text {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.1428571429;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: #ffffff;
-  margin-bottom: 20px;
-}
-
-.footer-icon__list {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-}
-
-.footer-icon__social {
-  fill: #ffffff;
-}
-
-.footer-icon__link {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 44px;
-  height: 44px;
-  border-radius: 50px;
-  background-color: rgba(255, 255, 255, 0.1);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.footer-icon__link:hover, .footer-icon__link:focus {
-  background-color: #2196f3;
-}
-
 .footer-form {
   display: flex;
   align-items: flex-end;
@@ -753,6 +586,7 @@ address {
   outline: none;
   color: rgba(255, 255, 255, 0.6);
   padding: 16px 15px;
+  cursor: pointer;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-form__input:focus {
@@ -774,7 +608,174 @@ address {
   letter-spacing: 0.06em;
   color: #ffffff;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;
 }
 .footer-form__button:hover, .footer-form__button:focus {
   background-color: #188ce8;
+}
+
+.conteiner {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
+}
+
+.header__conteiner {
+  display: flex;
+  align-items: center;
+}
+
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+.section--no-padding-top {
+  padding-top: 0;
+}
+
+.section--background {
+  background-color: #f5f4fa;
+}
+
+.section__title {
+  font-size: 36px;
+  line-height: 42px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  margin-bottom: 50px;
+  color: #212121;
+}
+
+.socials {
+  display: flex;
+  gap: 10px;
+  margin-top: 16px;
+}
+
+.socials__link {
+  width: 44px;
+  height: 44px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.socials__link:hover, .socials__link:focus {
+  background-color: #2196f3;
+}
+.socials__link:hover .socials__icon, .socials__link:focus .socials__icon {
+  fill: #ffffff;
+}
+
+.socials__icon {
+  fill: #afb1b8;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-socials__text {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.1428571429;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #ffffff;
+  margin-bottom: 20px;
+}
+
+.footer-socials__list {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.footer-socials__icon {
+  fill: #ffffff;
+}
+
+.footer-socials__link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50px;
+  background-color: rgba(255, 255, 255, 0.1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer-socials__link:hover, .footer-socials__link:focus {
+  background-color: #2196f3;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  -webkit-clip-path: inset(100%);
+          clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+body {
+  font-family: "Roboto", sans-serif;
+  color: #212121;
+  background-color: #ffffff;
+}
+
+h1,
+h2,
+h3,
+p,
+ul {
+  margin: 0;
+}
+
+ul {
+  padding: 0;
+  list-style: none;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+a {
+  text-decoration: none;
+}
+
+.portfolio-btn__list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 30px;
+  margin-bottom: 34px;
+}
+
+.button {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.625;
+  letter-spacing: 0.03em;
+  color: #212121;
+  padding: 6px 22px;
+  background-color: #f5f4fa;
+  border-radius: 4px;
+  border-color: transparent;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;
+}
+.button:hover, .button:focus {
+  background-color: #2196f3;
+  color: #ffffff;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
 }/*# sourceMappingURL=main.css.map */
