--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -128,6 +128,8 @@
   color: $primary-text-color;
 
   margin-top: 20px;
+
+  cursor: pointer;
 }
 
 .modal-form__span--checkbox-icon {
@@ -208,6 +210,5 @@
   border-radius: 50%;
 
   padding: 0;
-}
-.modal__icon--close {
+  cursor: pointer;
 }
