--- a/sass/components/_page-features.scss
+++ b/sass/components/_page-features.scss
@@ -1,4 +1,4 @@
-.features_list {
+.features {
   display: flex;
 
   gap: 30px;
@@ -8,7 +8,7 @@
   width: 270px;
 }
 
-.features__icon--background {
+.features__icon-box {
   display: flex;
   align-items: center;
   justify-content: center;
