--- a/sass/components/_portfolio-card-set.scss
+++ b/sass/components/_portfolio-card-set.scss
@@ -1,39 +1,3 @@
-.portfolio-btn__list {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  gap: 30px;
-  margin-bottom: 34px;
-}
-
-.button {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: calc(26 / 16);
-
-  letter-spacing: 0.03em;
-
-  color: $primary-title-color;
-
-  padding: 6px 22px;
-
-  background-color: $secondary-background-color;
-  border-radius: 4px;
-  border-color: transparent;
-
-  transition: background-color 250ms $cubic-bezier, color 250ms $cubic-bezier,
-    box-shadow 250ms $cubic-bezier;
-  &:hover,
-  &:focus {
-    background-color: $accent-color;
-    color: $primary-white-color;
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-      0px 2px 2px rgba(0, 0, 0, 0.12);
-    border-radius: 4px;
-  }
-}
-
 .project__list {
   display: flex;
   flex-wrap: wrap;
@@ -51,11 +15,6 @@
   &:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
       1px 4px 6px rgba(0, 0, 0, 0.16);
-  }
-
-  &:hover .card__text,
-  &:focus .card__text {
-    transform: translateY(0);
   }
 }
 .card__describe {
@@ -88,6 +47,11 @@
   height: 100%;
 
   transform: translateY(101%);
+
+  .card__link:hover &,
+  .card__link:focus & {
+    transform: translateY(0);
+  }
 
   transition: transform 250ms $cubic-bezier;
 }
