--- a/sass/base/_general.scss
+++ b/sass/base/_general.scss
@@ -21,10 +21,15 @@ ul {
 
 img {
   display: block;
+  width: 100%;
   max-width: 100%;
   height: auto;
 }
 
 a {
   text-decoration: none;
+}
+
+address {
+  font-style: normal;
 }
