--- a/sass/main.scss
+++ b/sass/main.scss
@@ -20,10 +20,13 @@
 
 @import 'components/portfolio-btn';
 
-header,
-.section--no-padding-top,
-.section--background,
-.section-clients,
-footer {
+header
+// footer,
+// .hero,
+// .section-features,
+// .section--no-padding-top,
+// .section--background,
+// .section-clients
+{
   display: none;
 }
