--- a/sass/components/_page-footer.scss
+++ b/sass/components/_page-footer.scss
@@ -7,23 +7,37 @@
 }
 
 .footer-conteiner {
-  display: flex;
-  align-items: baseline;
-
   padding-top: 60px;
   padding-bottom: 60px;
-}
 
-address {
-  font-style: normal;
+  @media screen and (max-width: 768px) {
+    text-align: center;
+  }
+
+  @include for-size(tablet) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  @include for-size(desktop) {
+    align-items: baseline;
+    flex-wrap: nowrap;
+  }
 }
 
 .footer-contacts {
-  margin-right: 70px;
+  @include for-size(desktop) {
+    margin-right: 70px;
+  }
 }
 
 .address {
   margin-top: 20px;
+
+  @include for-size(mobile-only) {
+    margin-bottom: 60px;
+  }
 }
 
 .addres__item:not(:last-child) {
@@ -51,17 +65,30 @@ address {
 }
 
 .footer-contacts {
-  flex-grow: 1;
+  @include for-size(tablet) {
+    margin-right: 165px;
+
+    @include for-size(desktop) {
+      flex-grow: 1;
+    }
+  }
 }
 
 // form
 
 .footer-form {
-  display: flex;
+  @include for-size(tablet) {
+    margin-top: 60px;
+  }
 
-  align-items: flex-end;
+  @include for-size(desktop) {
+    display: flex;
 
-  margin-left: 93px;
+    align-items: flex-end;
+
+    margin-left: 93px;
+    margin-top: 0;
+  }
 }
 
 .footer-form__label {
@@ -113,10 +140,14 @@ address {
   display: flex;
   align-items: center;
   gap: 10px;
-
+  margin: 0 auto;
   height: 50px;
 
   padding: 10px 28px;
+
+  @media screen and (max-width: 1200px) {
+    margin-top: 20px;
+  }
 
   background: $accent-color;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
