--- a/sass/components/_page-hero.scss
+++ b/sass/components/_page-hero.scss
@@ -2,7 +2,7 @@
   margin-left: auto;
   margin-right: auto;
 
-  width: 480px;
+  max-width: 480px;
 
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
     url(../img/hero/hero-tel.jpg);
@@ -12,7 +12,7 @@
   }
 
   @include for-size(tablet) {
-    width: 768px;
+    max-width: 768px;
     background-image: url(../img/hero/hero-tab.jpg);
 
     @include for-size(retina) {
@@ -21,7 +21,7 @@
   }
 
   @include for-size(desktop) {
-    width: 1600px;
+    max-width: 1600px;
     padding-top: 200px;
     padding-bottom: 200px;
     background-image: url(../img/hero/hero.jpg);
@@ -46,13 +46,13 @@
     font-size: 26px;
     line-height: calc(42 / 26);
 
-    width: 360px;
+    max-width: 360px;
   }
 
   @include for-size(desktop) {
     font-size: 44px;
     line-height: calc(60 / 44);
-    width: 696px;
+    max-width: 696px;
   }
 
   font-weight: 900;
@@ -60,7 +60,7 @@
   font-size: 26px;
   line-height: calc(42 / 26);
 
-  width: 360px;
+  max-width: 360px;
 
   margin: 0 auto;
 
