--- a/css/main.css
+++ b/css/main.css
@@ -412,11 +412,30 @@ address {
 .project__list {
   display: flex;
   flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
   gap: 30px;
+}
+@media screen and (min-width: 768px) {
+  .project__list {
+    flex-direction: row;
+  }
 }
 
 .project__item {
-  width: 370px;
+  max-width: 450px;
+}
+@media screen and (min-width: 768px) {
+  .project__item {
+    width: calc((100% - 30px) / 2);
+    flex-direction: row;
+    justify-content: center;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .project__item {
+    width: calc((100% - 60px) / 3);
+  }
 }
 
 .card__link {
@@ -938,9 +957,15 @@ address {
 .portfolio-btn__list {
   display: flex;
   align-items: center;
-  justify-content: center;
-  gap: 30px;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  gap: 8px;
   margin-bottom: 34px;
+}
+@media screen and (min-width: 768px) {
+  .portfolio-btn__list {
+    justify-content: center;
+  }
 }
 
 .button {
@@ -963,6 +988,11 @@ address {
   border-radius: 4px;
 }
 
-header {
+header,
+.hero,
+.section-features,
+.section--no-padding-top,
+.section--background,
+.section-clients {
   display: none;
 }/*# sourceMappingURL=main.css.map */
