--- a/sass/base/_page-conteiner.scss
+++ b/sass/base/_page-conteiner.scss
@@ -21,4 +21,8 @@
 .header__conteiner {
   display: flex;
   align-items: center;
+
+  @include for-size(mobile-only) {
+    justify-content: space-between;
+  }
 }
